# File-Encryptor

./: Cargo.toml  README.md  output.enc  output.txt
src/: main.rs
