[package]
name = "file-encryptor"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
rand = "0.8"
pbkdf2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = {version = "4.4", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
sha2 = "0.9"
hmac = "0.11"
